@@ -19,9 +19,10 @@ class MySql extends GenericDatabase {
     // long varchar fields in a primary key (since that would exceed the key's
     // maximum size). Therefore, we have to convert all tables to the "utf8"
     // character set – but we only want to make fulltext tables case-sensitive.
-    $collation = $type == 'text' ? 'utf8_bin' : 'utf8_general_ci';
+    $charset = $type === 'text' ? 'utf8mb4' : 'utf8';
+    $collation = $type === 'text' ? 'utf8mb4_bin' : 'utf8_general_ci';
     try {
-      $this->database->query("ALTER TABLE {{$table}} CONVERT TO CHARACTER SET 'utf8' COLLATE '$collation'");
+      $this->database->query("ALTER TABLE {{$table}} CONVERT TO CHARACTER SET '$charset' COLLATE '$collation'");
     }
     catch (\PDOException $e) {
       $class = get_class($e);
